--- a/package.json
+++ b/package.json
@@ -3,33 +3,24 @@
   "version": "1.0.0",
   "description": "scheduling conference rooms for devcon",
   "main": "server.js",
-  "proxy": "http://localhost:3001",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "concurrently": "^4.1.2",
     "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
     "handlebars": "^4.3.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.7.1",
     "node-scrypt": "0.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
-  "devDependencies": {
-    "@babel/cli": "^7.6.2",
-    "@babel/core": "^7.6.2",
-    "@babel/node": "^7.6.2",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/polyfill": "^7.6.0",
-    "@babel/preset-env": "^7.6.2",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.6",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9"
-  },
   "scripts": {
-    "test": "test",
-    "seed": "node scripts/seedDB.js",
-    "dev": "nodemon --exec babel-node server.js",
-    "webpack": "webpack -wd"
+    "client-install": "npm install --prefix client",
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
