--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "scheduling conference rooms for devcon",
   "main": "server.js",
   "dependencies": {
+    "airtable": "^0.7.1",
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.2",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "handlebars": "^4.3.0",
