--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "scheduling conference rooms for devcon",
   "main": "server.js",
   "dependencies": {
+    "@sendgrid/mail": "^6.4.0",
     "airtable": "^0.7.1",
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.2",
